added webapp and desktop compability

--- a/parkingapp/web/index.html
+++ b/parkingapp/web/index.html
@@ -19,6 +19,7 @@
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
+  <meta name="viewport" content="width=850, initial-scale=1.0, minimum-scale=1.0">
 
   <!-- iOS meta tags & icons -->
   <meta name="mobile-web-app-capable" content="yes">
@@ -31,6 +32,13 @@
 
   <title>parkingapp</title>
   <link rel="manifest" href="manifest.json">
+
+  <style>
+    body {
+      min-width: 850px;
+      min-height: 600px;
+    }
+  </style>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
